# citadel-internal-service

./: .gitignore  .gitmodules  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: validate.yml
citadel-internal-service/: Cargo.toml
citadel-internal-service-connector/: Cargo.toml
citadel-internal-service-connector/src/: codec.rs  connector.rs  lib.rs  messenger.rs  util.rs
citadel-internal-service-connector/src/io_interface/: in_memory.rs  mod.rs  tcp.rs
citadel-internal-service-connector/src/messenger/: backend.rs  mod.rs
citadel-internal-service-connector/tests/: messenger.rs
citadel-internal-service-macros/: Cargo.toml
citadel-internal-service-macros/src/: lib.rs
citadel-internal-service-types/: Cargo.toml
citadel-internal-service-types/src/: lib.rs  messaging_layer.rs
citadel-internal-service/src/: lib.rs
citadel-internal-service/src/io_interface/: in_memory.rs  mod.rs  tcp.rs
citadel-internal-service/src/kernel/: ext.rs  mod.rs  request_handler.rs
citadel-internal-service/src/kernel/requests/: connect.rs  delete_virtual_file.rs  disconnect.rs  download_file.rs  get_account_information.rs  get_sessions.rs  message.rs  mod.rs  register.rs  send_file.rs
citadel-internal-service/src/kernel/requests/file/: delete_virtual_file.rs  download.rs  mod.rs  respond_file_transfer.rs  upload.rs
citadel-internal-service/src/kernel/requests/group/: create.rs  end.rs  group_list_groups.rs  invite.rs  kick.rs  leave.rs  message.rs  mod.rs  request_join.rs  respond_request.rs
citadel-internal-service/src/kernel/requests/local_db/: clear_all_kv.rs  delete_kv.rs  get_all_kv.rs  get_kv.rs  mod.rs  set_kv.rs
citadel-internal-service/src/kernel/requests/peer/: connect.rs  disconnect.rs  list_all.rs  list_registered.rs  mod.rs  register.rs
citadel-internal-service/src/kernel/responses/: disconnect.rs  group_channel_created.rs  group_event.rs  mod.rs  object_transfer_handle.rs  peer_event.rs
citadel-internal-service/tests/: common.rs  error_handling_tests.rs  file_transfer.rs  file_transfer_edge_cases.rs  group_chat.rs  intra_kernel.rs  kv_store_edge_cases.rs  loopback.rs  peer_auth_edge_cases.rs  service.rs  utilities.rs
citadel-internal-service/tests/common/: Cargo.toml  mod.rs
citadel-internal-service/tests/common/src/: lib.rs
citadel-messaging/: Cargo.toml
citadel-messaging/src/: lib.rs  reliable_ordered.rs
citadel_workspace_cli/: Cargo.toml
citadel_workspace_lib/: Cargo.toml
citadel_workspace_lib/src/: lib.rs
citadel_workspace_service/: Cargo.toml
citadel_workspace_service/src/: main.rs
citadel_workspace_service/src/kernel/: mod.rs  payload_handler.rs  request_handler.rs
citadel_workspace_service/tests/: file_transfer.rs  group_chat.rs  service.rs
citadel_workspace_service/tests/common/: mod.rs
citadel_workspace_types/: Cargo.toml
citadel_workspace_types/src/: lib.rs
service/: Cargo.toml
service/src/: empty_server.rs  main.rs
