[workspace]

members = [
    "citadel_workspace_types",
    "citadel_workspace_service",
    "citadel_workspace_cli",
    "service"
]

exclude = [
    "./target/*"
]

[workspace.dependencies]
# workspace deps
citadel_workspace_types = { path = "./citadel_workspace_types", default-features = false, version = "0.1.0" }
citadel_workspace_service = { path = "./citadel_workspace_service", default-features = false, version = "0.1.0" }
citadel_workspace_cli = { path = "./citadel_workspace_cli", default-features = false, version = "0.1.0" }
citadel_workspace_lib = { path = "./citadel_workspace_lib", default-features = false, version = "0.1.0" }

# standard deps
serde = { version = "1.0.104", features = ["derive"] }
citadel_sdk = { git = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol", branch = "thomas/metadata"}
tokio = { version = "1.28.1", default-features = false }
tokio-util = { version = "0.7.8", default-features = false }
bincode2 = { version = "2.0.1", default-features = false }
futures = { version = "0.3.28", default-features = false }
bytes = { version = "1.4.0", default-features = false }
uuid = {version="1.3.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
anyhow = "1.0.71"
citadel_logging = { version = "0.5.0", default-features = false }
async-recursion = {version = "1.0.4" }
parking_lot = { version = "0.12.1" }
structopt = { version = "0.3.26" }