[package]
name = "citadel-internal-service-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-internal-service-types = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
bincode2 = { workspace = true }
serde = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
uuid = { workspace =  true, features = ["v4"]}