[package]
name = "citadel-internal-service-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
citadel_types = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
citadel-internal-service-macros = { workspace = true }