[package]
name = "citadel-internal-service-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["citadel_sdk/vendored"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
citadel_types = { workspace = true }
citadel_sdk = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
citadel-internal-service-macros = { workspace = true }