[package]
name = "citadel-messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-internal-service-connector = { workspace = true }
citadel-internal-service-types = { workspace = true }
serde = { workspace = true }
bincode2 = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { workspace = true }
log = "0.4.21"
futures = { workspace = true }