[package]
name = "citadel_workspace_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
citadel_sdk= { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
citadel_workspace_types = { workspace = true }
bincode2 = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }