[package]
name = "citadel_service_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
localhost-testing = ["citadel_sdk/localhost-testing"]
vendored = ["citadel-internal-service/vendored"]

[[bin]]
name = "citadel_service_bin"
path = "src/main.rs"

[[bin]]
name = "citadel_server"
path = "src/empty_server.rs"

[dependencies]
structopt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
citadel-internal-service = { workspace = true }
citadel_sdk = { workspace = true }
citadel_logging = { workspace = true }