[package]
name = "citadel-internal-service-test-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
vendored = ["citadel_sdk/vendored"]

[dependencies]
citadel_sdk = { workspace = true, features=["multi-threaded"] }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
bincode2 = { workspace = true }
citadel-internal-service = { workspace = true }
citadel-internal-service-types = { workspace = true }
citadel-internal-service-connector = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
citadel_logging = { workspace = true }
bytes = { workspace = true }
async-recursion = { workspace = true }

[dev-dependencies]
citadel_sdk = { workspace = true, features=["multi-threaded", "localhost-testing"] }